--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@ body{
    <img src="ba3.jpg" alt="avater" class="image3">
    <div class="middle3">
      <div class="text3">
-        hi
+        code with mosh 
+       @java scri[t part-1
      </div>
    </div>
 </div>
